kubernetes/overlays/dev/patches/tdi-deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdi
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: tdi
          imagePullPolicy: Never
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
