kubernetes/overlays/dev/patches/tdi-ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdi
spec:
  rules:
    - host: tdi.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tdi
                port:
                  name: http
